# langchain-lab

./: .gitignore  1_agent_basics.py  1_graph_basics.py  7-memory-ext.py  advanced_chat_bot_1.py  advanced_chat_bot_2.py  chatbot_email_drafter_langgraph.py  human_in_the_loop.py  pyproject.toml  simple_agent_langgraph.py  simple_agent_toolnode_langgraph.py  supervisor_agent_langchain.py  supervisor_agent_langgraph.py
langchain-essentials/: 0-agent-demo.py  1-messages.py  1-models.py  2-messages.py  2-streaming.py  3-streaming.py  3-tools.py  4-tools-with-mcp.py  4-tools.py  5-memory.py  5-tools-with-mcp.py  6-memory.py  6-structured-output.py  7-middleware-dp.py  7-structured-output.py  8-middleware-dynamic-prompt.py  8-middleware-hitl.py  9-middleware-human-in-the-loop.py  README.md  create_agent.py  db_schema.sql
langgraph-essentials/: 1-nodes.py  2-static-edges.py  3-conditional-edges.py  4-memory.py  5-human-in-the-loop.py  6-application.py  6-tools.py  7-application-email-agent.py  7-memory-ext.py  8-application-sql-agent.py  README.md
